workspace処理
