# backend/cmd/server/server.go
@@ -62,7 +62,7 @@ func Serve(addr string) {
 	workspaceUsecase := usecase.NewWorkspaceUsecase(workspaceRepo, authUsecase)
 	workspaceHandler := handler.NewWorkspaceHandler(authUsecase, workspaceUsecase)
 	e.POST("/workspaces", workspaceHandler.PostWorkspace)
-	e.GET("/workspaces", workspaceHandler.SighnInWorkspace)
+	e.POST("/workspaces/login", workspaceHandler.SighnInWorkspace)
 
 	channelHandler := handler.NewChannelHandler(authUsecase, channelUsecase)
 	e.POST("/channels", channelHandler.PostChannel)
